Deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: 250738637992.dkr.ecr.eu-west-1.amazonaws.com/x23186925-thesis:latest  # Replace "latest" with the specific tag if needed
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: ecr-secret  # Reference to the secret for ECR authentication
