kubescore-manifest.yaml
---
# Source: nginx-app/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-releas-nginx-app
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 8000
      nodePort: 30009
---
# Source: nginx-app/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: my-releas-nginx-app
  labels:
    app: nginx
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
      - name: nginx
        image: 250738637992.dkr.ecr.eu-west-1.amazonaws.com/x23186925-thesis:latest
        ports:
        - containerPort: 8000
      imagePullSecrets:
      - name: ecr-secret
